test/fail/errors/ModuleDoesntExport.agda
module ModuleDoesntExport where

module A where

open A using (B)

TODO = Check This!

